create team can return 400, 409 messages
